--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "themes/archie-theme"]
-path = themes/archie-theme
+[submodule "themes/archie"]
+path = themes/archie
 url = https://github.com/lorenbuilds/archie-theme.git
 branch = main
