--- a/netlify.toml
+++ b/netlify.toml
@@ -14,4 +14,9 @@
   command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
-  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL" 
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+
+[[redirects]]
+  from = "/*"
+  to = "/404.html"
+  status = 404 
